# Seifenkiste_1_Connected

./: .gitignore  CMakeLists.txt  README.md  all_build.sh
dirs/lib/: CMakeLists.txt  common_defs.h  message_camera_class.cpp  message_camera_class.h  message_class.cpp  message_class.h  tcp_lib.cpp  tcp_lib.h
docu/: .~lock.git_repo_tracker.odt#  git_repo_tracker.odt
libraries/: CMakeLists.txt  common_defs.hpp  message_class.hpp  sensor_base_class.cpp  sensor_base_class.hpp  sensor_camera_class.cpp  sensor_camera_class.hpp  ut_sensor_camera.cpp
libraries/message_lib/: CMakeLists.txt  address_class.cpp  address_class.hpp  camera_message_class.cpp  camera_message_class.hpp  header_buffer.cpp  header_buffer.hpp  message_class.cpp  message_class.hpp  time_class.cpp  time_class.hpp  ut_address_lib.cpp  ut_buffer_lib.cpp  ut_message_lib.cpp
libraries/sensor_lib/: CMakeLists.txt  sensor_base_class.cpp  sensor_base_class.hpp  sensor_camera_class.cpp  sensor_camera_class.hpp  ut_sensor_camera.cpp
pc_cockpit/: CMakeLists.txt  CMakeLists_old_template.txt  pc_main.cpp
rpi4/: CMakeLists.txt  rpi4_main.cpp
